@@ -2,6 +2,8 @@ Revision history for Perl extension Gazelle
 
 {{$NEXT}}
 
+ - Set $0 to more easily find gazelle in ps(1) (Arthur Axel fREW Schmidt)
+
 0.46 2016-07-05T06:41:37Z
 
  - do not shutdown if server_starter was used (Thank you zhanghjster)
